--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <h4>Physics</h4>
                 <h5>makes things tick</h5>
                 <div class="border"></div>
-                I'm always amazed to understand how things work, what's behind and beneath anything you can imagine
+                I'm always amazed how you can turn pure thought into reality, how you can build anything from imagination with just logic and code.<br><i>ChatGPT<i>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
