--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <a href="https://www.tripadvisor.com/Tourism-g304061-Oradea_Bihor_County_Northwest_Romania_Transylvania-Vacations.html" target="_blank">Oradea, Bihor, România</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInDown" data-delay="300">
-              <i class="fa fa-phone fa-3x"></i><br>(0740)876.889
+              <i class="fa fa-phone fa-3x"></i><br>   (0771)220.369 <!--(0740)876.889-->
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
               <a href="mailto:david@veres.me"><i class="fa fa-envelope fa-3x"></i></a>
@@ -279,7 +279,7 @@
         <div class="row">
           <div class="col-lg-12 animated hiding" data-animation="fadeInUp">
             <p class="copyright">
-              Copyright &copy; 2016 Veres David-Gheorghe &middot;
+              Copyright &copy; 2025 Veres David-Gheorghe &middot;
 			  Based on <a href="http://www.twitter.com/halibegic">@halibegic</a>'s <a href="http://www.github.com/halibegic/merlin">Merlin</a> theme &middot;
               Based on <a href="http://getbootstrap.com/">Bootstrap</a>  &middot;
               Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
