--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 <img class="img-responsive" src="img/team/1.jpg" alt="">
               </div>
               <div class="bio">
-                <h4>Physics</h4>
-                <h5>makes things tick</h5>
+                <h4>Programming</h4>
+                <h5>01001000 01000101 01001100 01001100 01001111</h5>
                 <div class="border"></div>
                 <p>I'm always amazed how you can turn pure thought into reality, how you can build anything from imagination with just logic and code.<br><i>ChatGPT</i></p>
               </div>
